# PokemonYellow

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF_MAP_WORK.md  HANDOFF_TILE_SYSTEM.md  IMPLEMENTATION_PLAN.md  MAP_SYSTEM.md  MOVE_LEARNING_PLAN.md  PHASE_7_IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  README.md  TILE_SYSTEM_PLAN.md  battle-mechanics-fix.md  journal.md  pokedex-implementation-plan.md  pyproject.toml  save-load-implementation-plan.md
assets/maps/: pallet_town.tmx  player_house.tmx  route_1.tmx  test_tiles.tsx
data/encounters/: yellow_encounters.yaml
data/items/: items.yaml  yellow_item_list.yaml
data/maps/: pallet_town.json  (+1 more)
scripts/: check_encounter_data.py  export_pokeyellow_map.py  find_route_data.py  generate_simple_tiles.py  hydrate_data.py
src/: __init__.py  main.py
tests/: battle_test_helpers.py  conftest.py  test_bag.py  test_battle_item_cancel.py  test_battle_party_cancel.py  test_battle_party_wipe.py  test_battle_run.py  test_battle_sequence.py  test_dialog_box.py  test_display_constants.py  test_hp_bar_display.py  test_item_effects.py  test_item_pickup_collision.py  test_map_animated_tiles.py  test_map_manager.py  test_move_learning.py  test_party.py  test_party_hp_display.py  test_party_item_active.py  test_party_screen.py  test_phase_7_4.py  test_phase_7_5.py  test_phase_7_6.py  test_phase_7_7.py  test_pokedex_battle_flags.py  test_pokedex_logic.py  test_pokedex_overworld_flags.py  test_pokeyellow_map_converter.py  test_pp_tracking.py  test_save_data.py  test_sprite_loop.py  test_start_menu.py  test_summary_screen.py  test_turn_flow.py
(+67 files in other folders)
