# ABOUTME: Project configuration for Pokemon Yellow PyGame recreation
# ABOUTME: Defines dependencies and project metadata for use with uv package manager

[project]
name = "pokemon-yellow"
version = "0.1.0"
description = "Pixel-perfect recreation of Pokemon Yellow using PyGame"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
